--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,9 @@
 mysql:
   host: "localhost"
-  port: "3306"
+  port: "3307"
   user: "root"
   pass: ""
-  name: "rakamin"
+  name: "latihanrakamin"
 jwt:
   expired: "1"
   secret: secretRakamin
